Ajustes em todas as telas: Remoção do angular; Reajustes dos includes; Reajustes no csss's;

--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -21,10 +21,10 @@
 
 
 </head>
-<body class="with-side-menu" ng-app="">
+<body class="with-side-menu">
 
-<ng-include src="'../../includes/header.html'"></ng-include>
-<ng-include src="'../../includes/side-bar.html'"></ng-include>
+<div id="carrega-barra-superior"></div>
+<div id="carrega-menu"></div>
 
 
 <div class="page-content">
@@ -268,7 +268,7 @@
                           </small>
                         </div>
                         <div class="col-sm-4 text-center">
-                          <small><i class="fa fa-circle mr-xs" aria-hidden="true"></i> Valor inativo
+                          <small><i class="fa fa-circle mr-xs text-light-grey" aria-hidden="true"></i> Valor inativo
                           </small>
                         </div>
                       </div>
@@ -441,7 +441,7 @@
             <div class="row">
               <div class="col-md-4">
                 <label class="form-label semibold">Situação</label>
-                <p class="text-success"><strong><i class="fa fa-check" aria-hidden="true"></i> Curso ativo</strong></p>
+                <p class="text-success"><strong><i class="fa fa-check" aria-hidden="true"></i> Ativo</strong></p>
               </div>
               <div class="col-md-4">
                 <label class="form-label semibold">Data de criação</label>
@@ -667,9 +667,6 @@
 <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 <script src="../../js/lib/input-mask/input-mask-init.js"></script>
 
-<script src="../../js/lib/angular/angular.min.js"></script>
-<script src="../../js/lib/angular/controllers.js"></script>
-
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
 <script src="../../js/lib/notie/notie.js"></script>
 <script src="../../js/lib/notie/notie-init.js"></script>
@@ -710,6 +707,10 @@
     });
   });
 </script>
+
+
+
+
 
 </body>
 </html>
