--- a/pages/academico/grupos--editar.html
+++ b/pages/academico/grupos--editar.html
@@ -21,10 +21,10 @@
 
 
 </head>
-<body class="with-side-menu" ng-app="">
+<body class="with-side-menu">
 
-<ng-include src="'../../includes/header.html'"></ng-include>
-<ng-include src="'../../includes/side-bar.html'"></ng-include>
+<div id="carrega-barra-superior"></div>
+<div id="carrega-menu"></div>
 
 
 <div class="page-content">
@@ -148,9 +148,6 @@
 
 <script src="../../js/custom-jquery.validation.js"></script>
 
-<script src="../../js/lib/angular/angular.min.js"></script>
-<script src="../../js/lib/angular/controllers.js"></script>
-
 <script src="../../js/lib/bootstrap-sweetalert/sweetalert.min.js"></script>
 <script src="../../js/lib/notie/notie.js"></script>
 <script src="../../js/lib/notie/notie-init.js"></script>
@@ -194,6 +191,10 @@
     });
   });
 </script>
+
+
+<!-- script par carregar includes - Jogar fora -->
+<script src="../../js/load-includes.js"></script>
 
 
 </body>
