--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -18,10 +18,10 @@
 
 
 </head>
-<body class="with-side-menu" ng-app="">
+<body class="with-side-menu">
 
-<ng-include src="'../../includes/header.html'"></ng-include>
-<ng-include src="'../../includes/side-bar.html'"></ng-include>
+<div id="carrega-barra-superior"></div>
+<div id="carrega-menu"></div>
 
 
 <div class="page-content">
@@ -109,10 +109,10 @@
                               </label>
                               <label class="btn btn-secondary-outline">
                                 <input type="radio" name="options" id="" autocomplete="off" checked="">
-                                Ativos
+                                Ativo
                               </label>
                               <label class="btn btn-secondary-outline">
-                                <input type="radio" name="options" id="" autocomplete="off"> Inativos
+                                <input type="radio" name="options" id="" autocomplete="off"> Inativo
                               </label>
                             </div>
                           </div>
@@ -516,9 +516,7 @@
             <div class="row">
               <div class="col-md-4">
                 <label class="form-label semibold">Situação</label>
-                <p class="text-success"><i class="fa fa-check"
-                                           aria-hidden="true"></i>
-                  <strong>Curso ativo</strong></p>
+                <p class="text-success"><strong><i class="fa fa-check" aria-hidden="true"></i> Ativo</strong></p>
               </div>
               <div class="col-md-4">
                 <label class="form-label semibold">Carga horária</label>
@@ -584,9 +582,6 @@
 
 <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 <script src="../../js/lib/input-mask/input-mask-init.js"></script>
-
-<script src="../../js/lib/angular/angular.min.js"></script>
-<script src="../../js/lib/angular/controllers.js"></script>
 
 </body>
 </html>
