--- a/pages/academico/cursos--editar.html
+++ b/pages/academico/cursos--editar.html
@@ -173,7 +173,7 @@
                         </div>
                         <div class="tbl-cell tbl-cell-action-bordered">
                           <form>
-                            <button type="submit" class="action-btn" data-toggle="modal"
+                            <button type="button" class="action-btn" data-toggle="modal"
                                     data-target="#ModalValores"><i
                                     class="fa fa-plus-circle mr-xs"></i>Adicionar
                             </button>
@@ -710,7 +710,8 @@
 
 
 
-
+<!-- script par carregar includes - Jogar fora -->
+<script src="../../js/load-includes.js"></script>
 
 </body>
 </html>
