--- a/pages/academico/cursos.html
+++ b/pages/academico/cursos.html
@@ -456,7 +456,7 @@
                         </div>
                         <div class="tbl-cell tbl-cell-action-bordered">
                           <form>
-                            <button type="submit" class="action-btn" data-toggle="modal"
+                            <button type="button" class="action-btn" data-toggle="modal"
                                     data-target="#ModalValores"><i
                                     class="fa fa-plus-circle mr-xs"></i>Adicionar
                             </button>
