--- a/pages/academico/niveis--editar.html
+++ b/pages/academico/niveis--editar.html
@@ -144,7 +144,7 @@
                           </div>
                           <div class="tbl-cell tbl-cell-action-bordered">
                             <form>
-                              <button type="submit" class="action-btn" data-toggle="modal"
+                              <button type="button" class="action-btn" data-toggle="modal"
                                       data-target="#ModalSelecionaMatDid"><i
                                       class="fa fa-plus-circle mr-xs"></i>Adicionar
                               </button>
