--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -208,7 +208,7 @@
                         </div>
                         <div class="tbl-cell tbl-cell-action-bordered">
                           <form>
-                            <button type="submit" class="action-btn" data-toggle="modal"
+                            <button type="button" class="action-btn" data-toggle="modal"
                                     data-target="#ModalContatosPosto"><i
                                     class="fa fa-plus-circle mr-xs"></i>Adicionar
                             </button>
