Ajustes nos telefones

--- a/pages/posto/unidade--editar.html
+++ b/pages/posto/unidade--editar.html
@@ -217,6 +217,8 @@
                                 <option>Selecione</option>
                                 <option>Principal</option>
                                 <option>Comercial</option>
+                                <option>Celular</option>
+                                <option>Fax</option>
                                 <option>Outros</option>
                               </select>
                             </div>
