--- a/pages/posto/posto--editar.html
+++ b/pages/posto/posto--editar.html
@@ -377,6 +377,8 @@
                       <option>Selecione</option>
                       <option>Principal</option>
                       <option>Comercial</option>
+                      <option>Celular</option>
+                      <option>Fax</option>
                       <option>Outros</option>
                     </select>
                   </div>
