--- a/pages/servicos/servicos--editar.html
+++ b/pages/servicos/servicos--editar.html
@@ -316,5 +316,9 @@
   });
 </script>
 
+
+<!-- script par carregar includes - Jogar fora -->
+<script src="../../js/load-includes.js"></script>
+
 </body>
 </html>
