--- a/pages/servicos/servicos.html
+++ b/pages/servicos/servicos.html
@@ -583,5 +583,8 @@
 <script src="../../js/lib/input-mask/jquery.mask.min.js"></script>
 <script src="../../js/lib/input-mask/input-mask-init.js"></script>
 
+<!-- script par carregar includes - Jogar fora -->
+<script src="../../js/load-includes.js"></script>
+
 </body>
 </html>
